# godot-iroh

./: .gitignore  Cargo.toml  compilation_guide.md  compilation_guide_en.md  compilation_guide_zh.md
.github/workflows/: build.yml
addons/godot_iroh/: godot_iroh.gdextension.uid
examples/chat_app/: export_presets.cfg  icon.svg.import  project.godot
examples/chat_app/addons/godot_iroh/: godot_iroh.gdextension.uid
images/: logo.png.import  logo.svg.import  logo_square.png.import  logo_square.svg.import
src/: client.rs  server.rs
