[package]
name = "godot_iroh"
version = "0.1.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
iroh = { version = "0.91.2", default-features = false }
godot = "0.4.2"
anyhow = "1.0.99"
bytes = "1.10.1"
base64 = "0.22.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
